examples/c/error-codes/undefined/UB-CCV1-bad-static.output
UB-CCV1-bad-static.c:5:13: warning: overflow in expression; result is -2147483648 with type 'int' [-Winteger-overflow]
 0x7fffffff + 1;
            ^
UB-CCV1-bad-static.c:5:13: warning: expression result unused [-Wunused-value]
 0x7fffffff + 1;
 ~~~~~~~~~~ ^ ~
2 warnings generated.
UB-CCV1-bad-static.c:5:13: error: Signed integer overflow.

    Undefined behavior (UB-CCV1):
        see C11 section 6.5:5 http://rvdoc.org/C11/6.5
        see C11 section J.2:1 item 36 http://rvdoc.org/C11/J.2
        see CERT-C section INT32-C http://rvdoc.org/CERT-C/INT32-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

